fixed lightning not fitting issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,11 +54,9 @@ p {
 }
 
 #lightning img {
-    height: 100vh;
-    width: 100vw;
+    height: 90vh;
+    width: 90vw;
 }
-
-
 
 #chart--container {
     width: 100%;
